--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+llvm-toolchain-8 (1:8.0.1-10) UNRELEASED; urgency=low
+
+  * Use secure URI in debian/watch.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Thu, 02 Jul 2020 07:15:35 -0000
+
 llvm-toolchain-8 (1:8.0.1-9) unstable; urgency=medium
 
   * debian/patches/947f9692440836dcb8d88b74b69dd379d85974ce.patch:
