--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ llvm-toolchain-8 (1:8.0.1-10) UNRELEASED; urgency=low
 
   * Use secure URI in debian/watch.
   * Move source package lintian overrides to debian/source.
+  * Rely on pre-initialized dpkg-architecture variables.
 
  -- Debian Janitor <janitor@jelmer.uk>  Thu, 02 Jul 2020 07:15:35 -0000
 
